# sustainable-ai

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml  runTest.sh  utils.py
data/: tdp.csv
models/: __init__.py  densenet.py  dla.py  dla_simple.py  dpn.py  efficientnet.py  googlenet.py  lenet.py  mobilenet.py  mobilenetv2.py  regnet.py  resnet.py  resnext.py  senet.py  vgg.py
patches/: carbontracker.patch  eco2ai.patch
plots/: batch.ipynb  plots.ipynb
power/: generic_cpu.py  generic_tracker.py  intel.py  nvidia.py  ram.py  save_results.py  statistics.py  stats.py  tool_results.py
tests/: test_ascii_art.py  test_file_name_generator.py  test_logger.py  test_time_functions.py
utils/: __init__.py  arguments.py  ascii.py  check_values.py  clean.py  file_name_generator.py  format_time.py  log.py  model_parameters.py  platform_info.py  progress_bar.py
