[tool.poetry]
name = "sustainable-ai"
version = "0.1.0"
description = "A comparison of the energy consumption of various state-of-the-art Machine Learning models"
authors = ["Ioannis Mavromatis <ioannis.mavromatis@toshiba-bril.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sustainable_ai"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
torchvision = "^0.14.1"

[tool.poetry.group.dev.dependencies]
docformatter = "^1.5.1"
isort = "^5.11.4"
black = "^22.12.0"
pylint = "^2.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
